Feat: Actualizar expresiones regulares para validación de contraseñas y teléfonos, y mejorar aserciones en pruebas